사진 추가. 웹사이트 현지화.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,14 +23,13 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="안녕하세요, 저는 강현호입니다."
+					tagline="일상뮤직과 고잔고잔을 개발하고 있습니다."
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> 개발자</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> 학생</Pill>
 					</div>
 				</Hero>
 
@@ -38,7 +37,7 @@ const projects = (await getCollection('work'))
 					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="/assets/1678515579500.jpg"
 				/>
 			</header>
 		</div>
@@ -46,8 +45,8 @@ const projects = (await getCollection('work'))
 		<main class="wrapper stack gap-20 lg:gap-48">
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<h3>저의 작품들</h3>
+					<p>제가 개발하거나 혹은 개발하고 있는 서비스들입니다.</p>
 				</header>
 
 				<div class="gallery">
@@ -64,7 +63,7 @@ const projects = (await getCollection('work'))
 
 				<div class="cta">
 					<CallToAction href="/work/">
-						View All
+						전부 보기
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
 				</div>
