작품들 title, content 수정. 소개 페이지 content 수정.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -42,15 +42,16 @@ import Hero from '../components/Hero.astro';
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Education</h2>
+				<h2 class="section-title">학력</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p><a href="http://wondong.icees.kr/main.do" target="blank">인천원동초등학교</a> (졸업)</p><br>
+					<p><a href="http://ikj.icems.kr/main.do" target="blank">인천고잔중학교</a> (재학)</p>
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Skills</h2>
+				<h2 class="section-title">실력</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<p>node.js 계열의 프레임워크를 많이 사용하며 안드로이드 앱 개발을 1년동안 해왔습니다.</p>
 				</div>
 			</section>
 		</main>
