--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,8 +7,8 @@ interface Props {
 }
 
 const {
-	title = 'Jeanine White: Personal Site',
-	description = 'The personal site of Jeanine White',
+	title = 'hyeonho64',
+	description = '강현호의 포트폴리오 사이트입니다.',
 } = Astro.props;
 ---
 
